# Finova

agents/first_crew_finova/: pyproject.toml
agents/first_crew_finova/src/first_crew_finova/: crew.py  main.py
agents/first_crew_finova/src/first_crew_finova/config/: agents.yaml  tasks.yaml
client/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  render-build.sh  render.yaml  server.js  tailwind.config.js  vite.config.ts
client/public/: 404.html
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/app/Components/: AccountAttributionReport.tsx  AiChatSidebar.tsx  AreYouSureModal.tsx  AreYouSureModalR.tsx  BalanceReconciliationStatement.tsx  BankConnectionModal.tsx  ChartDashboard.tsx  CompanyArticlesModal.tsx  ComplianceAlertsComponent.tsx  DuplicateAlertsComponent.tsx  EditExtractedDataComponent.tsx  EditExtractedDataManagement.tsx  ExceptionReport.tsx  FilesSearchFiltersComponent.tsx  ForgotPasswordComponent.tsx  InitialClientCompanyModalSelect.tsx  LanguageDropdown.tsx  LoadingComponent.tsx  ManualJournalEntryModal.tsx  MyCalendarSelect.tsx  MyDateRangePicker.tsx  (+10 more)
client/src/components/: Dropzone.tsx  login-form.tsx
client/src/redux/: store.ts
client/src/schadcn components/: app-sidebar.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  team-switcher.tsx
server/finova/: Dockerfile  EMAIL_DEMO.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  tsconfig.json
server/finova/prisma/: prisma.service.ts  schema.prisma
server/finova/src/: app.module.ts  main.ts
(+158 files in other folders)
