[project]
name = "first_crew_finova"
version = "0.1.0"
description = "first-crew-finova using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
first_crew_finova = "first_crew_finova.main:run"
run_crew = "first_crew_finova.main:run"
train = "first_crew_finova.main:train"
replay = "first_crew_finova.main:replay"
test = "first_crew_finova.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
